Sign in and sign up

--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -7,3 +7,5 @@
 @import './sections/apps.scss';
 @import './sections/tools.scss';
 @import './sections/subscribe.scss';
+@import './sections/_signup.scss';
+@import './sections/_signin.scss';
