--- a/WebApp/Views/Auth/SignUp.cshtml
+++ b/WebApp/Views/Auth/SignUp.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = Model.Title;
 }
 
-<section>
+<section id="signup">
     <div class="container">
-        <form method="post" asp-controller="Auth" asp-action="SignUp">
+        <form class="signup-form" method="post" asp-controller="Auth" asp-action="SignUp" novalidate>
             <h1>Create Account</h1>
             <p>Already have an account?<a asp-controller="Auth" asp-action="SignIn">Sign in Here</a></p>
 
@@ -37,21 +37,17 @@
                     <input asp-for="Form.ConfirmPassword" />
                 </div>
 
-                <div id="form-" class="checkbox-group">
+                <div id="form-terms" class="checkbox-group">
                     <input asp-for=Form.TermsAndConditions />
                     <label asp-for="Form.TermsAndConditions">
                         I agree to the <a asp-controller="About" asp-action="Terms">
                             Terms
                         </a> & <a asp-controller="About" asp-action="Conditions">Conditions</a>
                     </label>
+                    <span class="checkbox-error" asp-validation-for="Form.TermsAndConditions"></span>
                     <span asp-for="Form.TermsAndConditions"></span>
-
                 </div>
-
-
             </div>
-
-
             <button class="btn-theme" type="submit">@Model.Title</button>
         </form>
     </div>
