--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <a href="/" id="logo">
-                <img src="images/silicon-logo.svg" alt="Silicon">
+                <img src="~/images/silicon-logo.svg" alt="Silicon">
             </a>
 
             <div id="menu">
@@ -37,8 +37,9 @@
             </div>
 
             <div class="account-buttons">
-                <button class="btn-gray text-s"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</button>
-                <button class="btn-theme text-s"><i class="fa-regular fa-user"></i>Sign up</button>
+                
+                <a asp-controller="Auth" asp-action="SignIn" class="btn-gray"><i class="fa-regular fa-arrow-right-to-bracket"></i>Sign in</a>
+                <a asp-controller="Auth" asp-action="SignUp" class="btn-theme"><i class="fa-regular fa-user"></i>Sign up</a>
             </div>
 
             <div class="btn-mobile">
@@ -76,7 +77,7 @@
         
     <footer>
         <div class="container">
-            <div class="social-media">
+            <div class="social-media @((ViewContext.RouteData.Values["Controller"]!.ToString() == "Auth") ? " d-none" : "social-media")">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-x"></i></a>
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
