Account basics and addresses

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
             <div class="btn-switch">
                 <span>Light</span>
                 <div class="switch">
-                    <input type="checkbox" id="switch" role="switch">
+                    <input type="checkbox" id="switch" role="switch" />
                     <label for="switch" class="slider round"></label>
                 </div>
                 <span>Dark</span>
@@ -69,6 +69,7 @@
                 </nav>
 
             </div>
+        </div>  
     </header>
     <main>
         @RenderBody()
