--- a/WebApp/wwwroot/css/scss/_sections.scss
+++ b/WebApp/wwwroot/css/scss/_sections.scss
@@ -9,3 +9,4 @@
 @import './sections/subscribe.scss';
 @import './sections/_signup.scss';
 @import './sections/_signin.scss';
+@import './sections/_account-details.scss';
