--- a/WebApp/wwwroot/css/scss/sections/_signup.scss
+++ b/WebApp/wwwroot/css/scss/sections/_signup.scss
@@ -1,21 +1,21 @@
 #signup {
-    
     padding-top: 5rem;
     padding-bottom: 5rem;
 
     .container {
-        display:flex;
-        justify-content:center;
+        display: flex;
+        justify-content: center;
 
 
         .signup-form {
             width: 50%;
             display: flex;
             flex-direction: column;
-            
+
 
             h1 {
                 @include h3;
+
                 @include lg {
                     @include h1;
                 }
@@ -80,15 +80,13 @@
 
                 #form-terms {
                     grid-area: terms;
-                    
+                    margin-top: .5rem;
+                    margin-bottom: 1rem;
+
                     .checkbox-error {
                         color: $danger;
                         font-weight: 500;
                         opacity: 0.7;
-                    }
-
-                    .checkbox-group {
-
                     }
                 }
             }
