--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -917,12 +917,15 @@ footer .container .social-media a:hover {
 }
 #signup .container .signup-form .content #form-terms {
   grid-area: terms;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
 #signup .container .signup-form .content #form-terms .checkbox-error {
   color: #EF4444;
   font-weight: 500;
   opacity: 0.7;
 }
+
 #signin {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1001,4 +1004,156 @@ footer .container .social-media a:hover {
   display: flex;
   justify-content: center;
   gap: 1.5rem;
+}
+
+#account {
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+}
+#account .container {
+  display: flex;
+}
+#account .container .account-nav {
+  width: 20%;
+  height: 90vh;
+  border-right: 1px solid rgba(147, 151, 173, 0.3);
+  margin-right: 10rem;
+}
+#account .container .account-nav .nav-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+  padding-top: 3.5rem;
+}
+#account .container .account-nav .nav-name-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+}
+#account .container .account-nav .nav-name-info h2 {
+  margin: 0;
+}
+#account .container .account-nav .nav-name-info p {
+  margin: 0;
+  margin-bottom: 1.5rem;
+}
+#account .container .account-nav .nav-buttons {
+  margin-right: 1rem;
+}
+#account .container .account-nav .nav-buttons a {
+  display: flex;
+  justify-content: start;
+  font-weight: 700;
+}
+#account .container .account-nav .nav-buttons .btn-gray {
+  background-color: white;
+}
+#account .container .account-nav .nav-buttons .btn-gray:hover {
+  background-color: #6366F1;
+}
+#account .container .account-details {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+#account .container .account-details .basic h3 {
+  color: #6366F1;
+}
+#account .container .account-details .basic .basic-content {
+  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "first last" "email phone" "bio bio";
+  gap: 0.5rem;
+}
+#account .container .account-details .basic .basic-content .basic-group {
+  display: flex;
+  flex-direction: column;
+  color: #0B0F19;
+  font-weight: 700;
+}
+#account .container .account-details .basic .basic-content .basic-group span {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+}
+#account .container .account-details .basic .basic-content .basic-group input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#account .container .account-details .basic .basic-content .basic-group input.input-validation-error {
+  border-color: #EF4444;
+}
+#account .container .account-details .basic .basic-content .basic-group .input-bio {
+  padding-bottom: 3rem;
+  margin-bottom: 1rem;
+  border: 1px solid #D4D7E5;
+  border-radius: 5px;
+  padding: 0.4rem;
+}
+#account .container .account-details .basic .basic-content #basic-firstname {
+  grid-area: first;
+}
+#account .container .account-details .basic .basic-content #basic-lastname {
+  grid-area: last;
+}
+#account .container .account-details .basic .basic-content #basic-email {
+  grid-area: email;
+}
+#account .container .account-details .basic .basic-content #basic-phone {
+  grid-area: phone;
+}
+#account .container .account-details .basic .basic-content #basic-bio {
+  grid-area: bio;
+}
+#account .container .account-details .basic .basic-buttons {
+  display: flex;
+  gap: 1rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(147, 151, 173, 0.3);
+}
+#account .container .account-details .address {
+  padding-top: 2rem;
+}
+#account .container .account-details .address h4 {
+  color: #6366F1;
+}
+#account .container .account-details .address .address-content {
+  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "first first" "second second" "postalcode city";
+  gap: 0.5rem;
+}
+#account .container .account-details .address .address-content .address-group {
+  display: flex;
+  flex-direction: column;
+  color: #0B0F19;
+  font-weight: 700;
+}
+#account .container .account-details .address .address-content .address-group input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#account .container .account-details .address .address-content #address-line1 {
+  grid-area: first;
+}
+#account .container .account-details .address .address-content #address-line2 {
+  grid-area: second;
+}
+#account .container .account-details .address .address-content #address-postalcode {
+  grid-area: postalcode;
+}
+#account .container .account-details .address .address-content #address-city {
+  grid-area: city;
+}
+#account .container .account-details .address .address-buttons {
+  display: flex;
+  gap: 1rem;
+  padding-top: 1rem;
 }
