responsivity on pages

--- a/WebApp/wwwroot/css/scss/sections/_account-details.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-details.scss
@@ -4,12 +4,24 @@
 
 	.container {
 		display: flex;
+		flex-direction: column;
+
+		@include xl {
+			display: flex;
+			flex-direction: row;
+		}
 
 		.account-nav {
-			width: 20%;
-			height: 90vh;
-			border-right: 1px solid rgb(147, 151, 173, 0.3);
-			margin-right: 10rem;
+			padding-bottom: 2rem;
+			border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+			@include xl {
+				width: 20%;
+				height: 90vh;
+				border-right: 1px solid rgb(147, 151, 173, 0.3);
+				margin-right: 10rem;
+			}
 
 
 
@@ -43,11 +55,30 @@
 
 			.nav-buttons {
 				margin-right: 1rem;
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				gap: .2rem;
+
+				@include xl {
+					display: flex;
+					flex-direction: column;
+				}
+
+
+
 
 				a {
 					display: flex;
-					justify-content: start;
+					justify-content: center;
 					font-weight: 700;
+					width: auto;
+
+
+					@include xl {
+						display: flex;
+						font-weight: 700;
+						justify-content: start;
+					}
 				}
 
 				.btn-gray {
@@ -64,7 +95,11 @@
 		.account-details {
 			display: flex;
 			flex-direction: column;
-			width: 50%;
+
+
+			@include xl {
+				width: 50%;
+			}
 
 			h1 {
 			}
@@ -80,8 +115,14 @@
 					display: grid;
 					grid-template-columns: 1fr 1fr;
 					grid-template-areas:
-						"first last" "email phone" "bio bio";
+						"first last" "email email" "phone phone" "bio bio";
 					gap: .5rem;
+
+					@include xl {
+						grid-template-areas:
+							"first last" "email phone" "bio bio";
+						
+					}
 
 
 					.basic-group {
