--- a/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-saved-items.scss
@@ -4,20 +4,33 @@
 
     .container {
         display: flex;
+        flex-direction: column;
+
+        @include xl {
+            display: flex;
+            flex-direction: row;
+        }
 
         .account-nav {
-            width: 20%;
-            height: 85vh;
-            border-right: 1px solid rgb(147, 151, 173, 0.3);
-            margin-right: 10rem;
+            padding-bottom: 2rem;
+            border-bottom: 1px solid rgb(147, 151, 173, 0.3);
+
+
+            @include xl {
+                width: 20%;
+                height: 90vh;
+                border-right: 1px solid rgb(147, 151, 173, 0.3);
+                margin-right: 10rem;
+            }
+
 
 
             .nav-image {
-                padding-top: 3.5rem;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 margin-right: 1rem;
+                padding-top: 3.5rem;
 
                 img {
                 }
@@ -42,11 +55,30 @@
 
             .nav-buttons {
                 margin-right: 1rem;
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: .2rem;
+
+                @include xl {
+                    display: flex;
+                    flex-direction: column;
+                }
+
+
+
 
                 a {
                     display: flex;
-                    justify-content: flex-start;
+                    justify-content: center;
                     font-weight: 700;
+                    width: auto;
+
+
+                    @include xl {
+                        display: flex;
+                        font-weight: 700;
+                        justify-content: start;
+                    }
                 }
 
                 .btn-gray {
