--- a/WebApp/Views/Home/NotFound404.cshtml
+++ b/WebApp/Views/Home/NotFound404.cshtml
@@ -6,7 +6,7 @@
 
 <section id="not-found">
     <div class="container">
-        <div class="404-image">
+        <div class="notfound-image">
             <img class="not-found-img" src="~/images/404.svg" />
         </div>
         <div class="not-found-content">
