--- a/WebApp/wwwroot/css/scss/sections/_not-found.scss
+++ b/WebApp/wwwroot/css/scss/sections/_not-found.scss
@@ -8,6 +8,14 @@
         justify-content: center;
         text-align: center;
 
+        .notfound-image {
+            
+            img {
+                height: 100%;
+                width: 50%;
+                
+            }
+        }
 
         .not-found-btn {
             display: flex;
