--- a/WebApp/wwwroot/css/scss/sections/_signin.scss
+++ b/WebApp/wwwroot/css/scss/sections/_signin.scss
@@ -7,10 +7,13 @@
         justify-content: center;
 
         .signin-form {
-            width: 50%;
             display: flex;
             flex-direction: column;
-            
+
+            @include xl {
+                width: 50%;
+            }
+
 
             h1 {
                 @include h3;
@@ -18,9 +21,6 @@
                 @include lg {
                     @include h1;
                 }
-
-
-
             }
 
             .content {
@@ -73,26 +73,23 @@
                 margin-top: 1rem;
                 text-align: center;
                 font-weight: 600;
-             }
+            }
 
-                .social-login {
+            .social-login {
+                display: flex;
+                flex-direction: column;
+                margin-top: 1rem;
+
+                h2 {
+                    text-align: center;
+                    color: $gray-900;
+                }
+
+                .social-buttons {
                     display: flex;
-                    flex-direction: column;
-                    margin-top: 1rem;
-                    h2 {
-                        text-align: center;
-                        color: $gray-900;
-                        
-
-                    }
-
-                    .social-buttons {
-                        display: flex;
-                        justify-content: center;
-                        gap: 1.5rem;
-                    }
-                
-                
+                    justify-content: center;
+                    gap: 1.5rem;
+                }
             }
         }
     }
