--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -935,9 +935,13 @@ footer .container .social-media a:hover {
   justify-content: center;
 }
 #signin .container .signin-form {
-  width: 50%;
   display: flex;
   flex-direction: column;
+}
+@media (min-width: 1200px) {
+  #signin .container .signin-form {
+    width: 50%;
+  }
 }
 #signin .container .signin-form h1 {
   line-height: 160%;
@@ -1012,12 +1016,25 @@ footer .container .social-media a:hover {
 }
 #account .container {
   display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1200px) {
+  #account .container {
+    display: flex;
+    flex-direction: row;
+  }
 }
 #account .container .account-nav {
-  width: 20%;
-  height: 90vh;
-  border-right: 1px solid rgba(147, 151, 173, 0.3);
-  margin-right: 10rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(147, 151, 173, 0.3);
+}
+@media (min-width: 1200px) {
+  #account .container .account-nav {
+    width: 20%;
+    height: 90vh;
+    border-right: 1px solid rgba(147, 151, 173, 0.3);
+    margin-right: 10rem;
+  }
 }
 #account .container .account-nav .nav-image {
   display: flex;
@@ -1042,11 +1059,28 @@ footer .container .social-media a:hover {
 }
 #account .container .account-nav .nav-buttons {
   margin-right: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.2rem;
+}
+@media (min-width: 1200px) {
+  #account .container .account-nav .nav-buttons {
+    display: flex;
+    flex-direction: column;
+  }
 }
 #account .container .account-nav .nav-buttons a {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   font-weight: 700;
+  width: auto;
+}
+@media (min-width: 1200px) {
+  #account .container .account-nav .nav-buttons a {
+    display: flex;
+    font-weight: 700;
+    justify-content: start;
+  }
 }
 #account .container .account-nav .nav-buttons .btn-gray {
   background-color: white;
@@ -1057,7 +1091,11 @@ footer .container .social-media a:hover {
 #account .container .account-details {
   display: flex;
   flex-direction: column;
-  width: 50%;
+}
+@media (min-width: 1200px) {
+  #account .container .account-details {
+    width: 50%;
+  }
 }
 #account .container .account-details .basic h3 {
   color: #6366F1;
@@ -1066,8 +1104,13 @@ footer .container .social-media a:hover {
   justify-content: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-areas: "first last" "email phone" "bio bio";
+  grid-template-areas: "first last" "email email" "phone phone" "bio bio";
   gap: 0.5rem;
+}
+@media (min-width: 1200px) {
+  #account .container .account-details .basic .basic-content {
+    grid-template-areas: "first last" "email phone" "bio bio";
+  }
 }
 #account .container .account-details .basic .basic-content .basic-group {
   display: flex;
@@ -1164,12 +1207,25 @@ footer .container .social-media a:hover {
 }
 #security .container {
   display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1200px) {
+  #security .container {
+    display: flex;
+    flex-direction: row;
+  }
 }
 #security .container .account-nav {
-  width: 20%;
-  height: 90vh;
-  border-right: 1px solid rgba(147, 151, 173, 0.3);
-  margin-right: 10rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(147, 151, 173, 0.3);
+}
+@media (min-width: 1200px) {
+  #security .container .account-nav {
+    width: 20%;
+    height: 90vh;
+    border-right: 1px solid rgba(147, 151, 173, 0.3);
+    margin-right: 10rem;
+  }
 }
 #security .container .account-nav .nav-image {
   display: flex;
@@ -1194,11 +1250,28 @@ footer .container .social-media a:hover {
 }
 #security .container .account-nav .nav-buttons {
   margin-right: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.2rem;
+}
+@media (min-width: 1200px) {
+  #security .container .account-nav .nav-buttons {
+    display: flex;
+    flex-direction: column;
+  }
 }
 #security .container .account-nav .nav-buttons a {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   font-weight: 700;
+  width: auto;
+}
+@media (min-width: 1200px) {
+  #security .container .account-nav .nav-buttons a {
+    display: flex;
+    font-weight: 700;
+    justify-content: start;
+  }
 }
 #security .container .account-nav .nav-buttons .btn-gray {
   background-color: white;
@@ -1209,7 +1282,11 @@ footer .container .social-media a:hover {
 #security .container .account-security {
   display: flex;
   flex-direction: column;
-  width: 60%;
+}
+@media (min-width: 1200px) {
+  #security .container .account-security {
+    width: 60%;
+  }
 }
 #security .container .account-security .security h3 {
   color: #6366F1;
@@ -1284,6 +1361,10 @@ footer .container .social-media a:hover {
   justify-content: center;
   text-align: center;
 }
+#not-found .container .notfound-image img {
+  height: 100%;
+  width: 50%;
+}
 #not-found .container .not-found-btn {
   display: flex;
   justify-content: center;
@@ -1295,19 +1376,32 @@ footer .container .social-media a:hover {
 }
 #saved-items .container {
   display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1200px) {
+  #saved-items .container {
+    display: flex;
+    flex-direction: row;
+  }
 }
 #saved-items .container .account-nav {
-  width: 20%;
-  height: 85vh;
-  border-right: 1px solid rgba(147, 151, 173, 0.3);
-  margin-right: 10rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(147, 151, 173, 0.3);
+}
+@media (min-width: 1200px) {
+  #saved-items .container .account-nav {
+    width: 20%;
+    height: 90vh;
+    border-right: 1px solid rgba(147, 151, 173, 0.3);
+    margin-right: 10rem;
+  }
 }
 #saved-items .container .account-nav .nav-image {
-  padding-top: 3.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 1rem;
+  padding-top: 3.5rem;
 }
 #saved-items .container .account-nav .nav-name-info {
   display: flex;
@@ -1325,11 +1419,28 @@ footer .container .social-media a:hover {
 }
 #saved-items .container .account-nav .nav-buttons {
   margin-right: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.2rem;
+}
+@media (min-width: 1200px) {
+  #saved-items .container .account-nav .nav-buttons {
+    display: flex;
+    flex-direction: column;
+  }
 }
 #saved-items .container .account-nav .nav-buttons a {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   font-weight: 700;
+  width: auto;
+}
+@media (min-width: 1200px) {
+  #saved-items .container .account-nav .nav-buttons a {
+    display: flex;
+    font-weight: 700;
+    justify-content: start;
+  }
 }
 #saved-items .container .account-nav .nav-buttons .btn-gray {
   background-color: white;
@@ -1344,51 +1455,136 @@ footer .container .social-media a:hover {
 }
 #contact .container {
   display: flex;
+  position: relative;
+}
+@inclde xl {
+  #contact .container {
+    justify-content: space-between;
+  }
+}
+#contact .container .left-side {
+  display: flex;
   flex-direction: column;
 }
-#contact .container .nav-links a {
+@media (min-width: 1200px) {
+  #contact .container .left-side {
+    max-width: 30%;
+  }
+}
+#contact .container .left-side .nav-links a {
   color: #9397ad;
   text-decoration: none;
 }
-#contact .container .nav-links .home i {
+#contact .container .left-side .nav-links .home i {
   margin-right: 0.2rem;
 }
-#contact .container .nav-links .contact {
+#contact .container .left-side .nav-links .contact {
   color: #6366F1;
 }
-#contact .container .contact-content h1 {
+#contact .container .left-side .contact-content {
+  padding-bottom: 4rem;
+}
+#contact .container .left-side .contact-content h1 {
   padding-top: 1rem;
 }
-#contact .container .contact-content .contact-group {
+#contact .container .left-side .contact-content .contact-group {
   display: flex;
   padding-top: 2rem;
-  max-width: 30%;
 }
-#contact .container .contact-content .contact-group .contact-icon {
+#contact .container .left-side .contact-content .contact-group .contact-icon {
   padding-right: 1.5rem;
 }
-#contact .container .contact-content .contact-group .contact-icon i {
+#contact .container .left-side .contact-content .contact-group .contact-icon i {
   font-size: 1.2rem;
   background-color: white;
   border: 1px solid white;
   padding: 1rem;
   border-radius: 50%;
 }
-#contact .container .contact-content .contact-group .contact-email .btn-gray {
+#contact .container .left-side .contact-content .contact-group .contact-email .btn-gray {
   display: flex;
   background-color: #F3F6FF;
   color: #6366F1;
+  padding-left: 0;
+  font-weight: 700;
 }
-#contact .container .contact-content .contact-group .contact-email .btn-gray:hover {
+#contact .container .left-side .contact-content .contact-group .contact-email .btn-gray:hover {
   color: #8B5CF6;
 }
-#contact .container .contact-content .contact-group .contact-career .btn-gray {
+#contact .container .left-side .contact-content .contact-group .contact-career .btn-gray {
   display: flex;
   background-color: #F3F6FF;
   color: #6366F1;
+  padding-left: 0;
+  font-weight: 700;
 }
-#contact .container .contact-content .contact-group .contact-career .btn-gray:hover {
+#contact .container .left-side .contact-content .contact-group .contact-career .btn-gray:hover {
   color: #8B5CF6;
+}
+#contact .container .right-side {
+  display: none;
+}
+@media (min-width: 1200px) {
+  #contact .container .right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+#contact .container .right-side .form-box {
+  background-color: white;
+  padding: 4rem 3rem 4rem 3rem;
+  position: absolute;
+  right: 0;
+  top: 3rem;
+}
+#contact .container .right-side .form-box .contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#contact .container .right-side .form-box .contact-form .form-group {
+  display: flex;
+  flex-direction: column;
+}
+#contact .container .right-side .form-box .contact-form .form-group .opt {
+  display: flex;
+  gap: 0.2rem;
+}
+#contact .container .right-side .form-box .contact-form .form-group .opt p {
+  margin: 0;
+}
+#contact .container .right-side .form-box .contact-form .form-group label {
+  font-weight: 700;
+  color: #0B0F19;
+}
+#contact .container .right-side .form-box .contact-form .form-group textarea {
+  padding-bottom: 5rem;
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#contact .container .right-side .form-box .contact-form .form-group textarea.input-validation-error {
+  border-color: #EF4444;
+}
+#contact .container .right-side .form-box .contact-form .form-group select {
+  padding: 0.2rem;
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#contact .container .right-side .form-box .contact-form .form-group input {
+  border: 1px solid #D4D7E5;
+  padding: 0.4rem;
+  border-radius: 5px;
+}
+#contact .container .right-side .form-box .contact-form .form-group input.input-validation-error {
+  border-color: #EF4444;
+}
+#contact .container .right-side .form-box .contact-form .form-group span {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
 }
 #contact .map iframe {
   width: 100%;
