--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
 
             <div id="menu">
                 <nav>
-                    <a class="menu-link" href="#">Overview</a>
-                    <a class="menu-link" href="#">Features</a>
-                    <a class="menu-link" href="#">Courses</a>
+                    <a class="menu-link" asp-controller="Home" asp-action="Index">Overview</a>
+                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="benefits">Features</a>
+                    <a class="menu-link" asp-controller="Home" asp-action="Contact">Contact</a>
                 </nav>
             </div>
 
