--- a/WebApp/Views/Home/Contact.cshtml
+++ b/WebApp/Views/Home/Contact.cshtml
@@ -80,3 +80,5 @@
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15009.23163816886!2d-122.41654492654985!3d37.736052354686535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f7f02449cda7b%3A0x56b4d414afddd65!2sSilver%20Terrace%2C%20San%20Francisco%2C%20Kalifornien%2094124%2C%20USA!5e0!3m2!1ssv!2sse!4v1709129973451!5m2!1ssv!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 </section>
+
+@await Html.PartialAsync("~/Views/Shared/_validationScriptPartial.cshtml")
