--- a/WebApp/wwwroot/css/scss/sections/_account-security.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-security.scss
@@ -120,15 +120,22 @@
 
 
                     .security-group {
+                        position: relative;
                         display: flex;
                         flex-direction: column;
                         color: $gray-900;
                         font-weight: 700;
 
                         span {
-                            color: $danger;
-                            font-weight: 500;
-                            opacity: 0.7;
+
+                            &.field-validation-error {
+                                color: $danger;
+                                font-weight: 500;
+                                opacity: 0.7;
+                                position: absolute;
+                                top: 0;
+                                right: 0;
+                            }
                         }
 
                         input {
