--- a/WebApp/wwwroot/css/scss/sections/_contact.scss
+++ b/WebApp/wwwroot/css/scss/sections/_contact.scss
@@ -14,7 +14,7 @@
         .left-side {
             display: flex;
             flex-direction: column;
-           
+
 
             @include xl {
                 max-width: 30%;
@@ -155,6 +155,7 @@
                     }
 
                     .form-group {
+                        position: relative;
                         display: flex;
                         flex-direction: column;
 
@@ -202,9 +203,15 @@
                         }
 
                         span {
-                            color: $danger;
-                            font-weight: 500;
-                            opacity: 0.7;
+
+                            &.field-validation-error {
+                                color: $danger;
+                                font-weight: 500;
+                                opacity: 0.7;
+                                position: absolute;
+                                top: 0;
+                                right: 0;
+                            }
                         }
                     }
 
