--- a/WebApp/wwwroot/css/scss/sections/_signup.scss
+++ b/WebApp/wwwroot/css/scss/sections/_signup.scss
@@ -39,9 +39,16 @@
                     font-weight: 700;
 
                     span {
-                        color: $danger;
-                        font-weight: 500;
-                        opacity: 0.7;
+                        
+                        
+                        &.field-validation-error {
+                            color: $danger;
+                            font-weight: 500;
+                            opacity: 0.7;
+                            position: absolute;
+                            top: 0; 
+                            right: 0;
+                        }
                     }
 
                     input {
