--- a/WebApp/wwwroot/css/scss/sections/_account-details.scss
+++ b/WebApp/wwwroot/css/scss/sections/_account-details.scss
@@ -131,6 +131,17 @@
 						color: $gray-900;
 						font-weight: 700;
 
+						.opt {
+							display: flex;
+							gap: .2rem;
+
+							p {
+								margin: 0;
+								color: $gray-600;
+								font-weight: 400;
+							}
+						}
+
 
 
 						span {
