--- a/WebApp/wwwroot/css/site.css
+++ b/WebApp/wwwroot/css/site.css
@@ -1125,6 +1125,15 @@ footer .container .social-media a:hover {
   color: #0B0F19;
   font-weight: 700;
 }
+#account .container .account-details .basic .basic-content .basic-group .opt {
+  display: flex;
+  gap: 0.2rem;
+}
+#account .container .account-details .basic .basic-content .basic-group .opt p {
+  margin: 0;
+  color: #9397AD;
+  font-weight: 400;
+}
 #account .container .account-details .basic .basic-content .basic-group span.field-validation-error {
   color: #EF4444;
   font-weight: 500;
@@ -1561,6 +1570,12 @@ footer .container .social-media a:hover {
   right: 0;
   top: 3rem;
 }
+#contact .container .right-side .form-box.show {
+  display: block;
+}
+#contact .container .right-side .form-box.hide {
+  display: none !important;
+}
 #contact .container .right-side .form-box .contact-form {
   display: flex;
   flex-direction: column;
@@ -1587,6 +1602,14 @@ footer .container .social-media a:hover {
   border: 1px solid #D4D7E5;
   padding: 0.4rem;
   border-radius: 5px;
+}
+#contact .container .right-side .form-box .contact-form .form-group textarea.field-validation-error {
+  color: #EF4444;
+  font-weight: 500;
+  opacity: 0.7;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 #contact .container .right-side .form-box .contact-form .form-group textarea.input-validation-error {
   border-color: #EF4444;
