--- a/WebApp/Views/Shared/Sections/Auth/_Sign-in.cshtml
+++ b/WebApp/Views/Shared/Sections/Auth/_Sign-in.cshtml
@@ -36,6 +36,12 @@
 				</div>
 			</div>
 			<button class="btn-theme" type="submit">@Model.Title</button>
+			@if (!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
+			{
+				<div class="alert">
+					@ViewData["ErrorMessage"]
+				</div>
+			}
 			<a class="get-password" asp-controller="Account" asp-action="GetPassword">Forgot your password?</a>
 			<div class="social-login">
 				<h2 class="h6">Or sign in with your social network</h2>
@@ -43,7 +49,6 @@
 					<a asp-controller="Auth" asp-action="GoogleLogin" class="btn-gray"><i class="fab fa-google"></i>Google</a>
 					<a asp-controller="Auth" asp-action="FacebookLogin" class="btn-gray"><i class="fab fa-facebook-f"></i>Facebook</a>
 				</div>
-
 			</div>
 		</form>
 	</div>
