--- a/WebApp/Views/Shared/Sections/Auth/_Sign-up.cshtml
+++ b/WebApp/Views/Shared/Sections/Auth/_Sign-up.cshtml
@@ -1,4 +1,4 @@
-﻿ @model SignUpViewModel;
+﻿@model SignUpViewModel;
 
 @{
     ViewData["Title"] = Model.Title;
@@ -6,10 +6,9 @@
 
 <section id="signup">
     <div class="container">
-        <form class="signup-form" method="post" asp-controller="Auth" asp-action="SignUp" novalidate>
+            <form class="signup-form" method="post" asp-controller="Auth" asp-action="SignUp" novalidate>
             <h1>Create Account</h1>
             <p>Already have an account?<a asp-controller="Auth" asp-action="SignIn">Sign in Here</a></p>
-
             <div class="content">
                 <div id="form-firstname" class="input-group">
                     <label asp-for=Form.FirstName></label>
@@ -49,7 +48,13 @@
                 </div>
             </div>
             <button class="btn-theme" type="submit">@Model.Title</button>
-        </form>
+            @if(!string.IsNullOrEmpty(ViewData["ErrorMessage"]?.ToString()))
+            {
+                <div class="alert">
+                    @ViewData["ErrorMessage"]
+                </div>
+            }
+          </form>
     </div>
 </section>
 
