--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using WebApp.ViewModels;
+@using Infrastructure.Entities;
+@using Microsoft.AspNetCore.Identity;
