--- a/WebApp/wwwroot/css/scss/sections/_signup.scss
+++ b/WebApp/wwwroot/css/scss/sections/_signup.scss
@@ -13,6 +13,15 @@
             flex-direction: column;
 
 
+            .alert {
+                background-color: #ef4444c2;
+                text-align: center;
+                font-weight: 700;
+                color: $gray-900;
+            }
+
+
+
             h1 {
                 @include h3;
 
@@ -39,14 +48,14 @@
                     font-weight: 700;
 
                     span {
-                        
-                        
+
+
                         &.field-validation-error {
                             color: $danger;
                             font-weight: 500;
                             opacity: 0.7;
                             position: absolute;
-                            top: 0; 
+                            top: 0;
                             right: 0;
                         }
                     }
@@ -96,6 +105,10 @@
                         opacity: 0.7;
                     }
                 }
+            }
+
+            .btn-theme {
+                margin-bottom: .5rem;
             }
         }
     }
