--- a/WebApp/wwwroot/css/scss/sections/_header.scss
+++ b/WebApp/wwwroot/css/scss/sections/_header.scss
@@ -56,6 +56,9 @@ header {
             @include lg {
                 display: flex;
             }
+            .profile-avatar{
+                
+            }
         }
 
         .btn-mobile {
